2004-11-01 Derek Price <derek@ximbiot.com>

	* sanity.sh (rcslib): Fix typo in path.

2004-11-01 Derek Price <derek@ximbiot.com>

	* sanity.sh (rcslib): Test a link to a path longer than 128
	characters.

2004-10-30  Mark D. Baushke  <mdb@cvshome.org>

	* patch.c (patch_cleanup): Add signal argument and use it.

2004-10-30  Mark D. Baushke  <mdb@cvshome.org>

	* client.c: Adjust include files to avoid problems with incomplete
	types under --disable-client.
	* msg-buffer.c: Deal with --disable-client --disable-server
	implicitly meaning --disable-proxy.
	* server.c: Adjust include files to avoid problems with incomplete
	types under --disable-server.

2004-10-30  Mark D. Baushke  <mdb@cvshome.org>

	* server.c (isThisHost): Deal with possibility of a missing
	hstrerror() function.

2004-10-29 Derek Price <derek@ximbiot.com>

	* server.c (server_root, move_file_offset, replace_file_offset):
	Remove dead code.

2004-10-29 Derek Price <derek@ximbiot.com>

	* filesubr.c (xreadlink): Make sure allocation is tried once at the
	maximum buffer size.  Protect against overflow.
	
2004-10-29 Derek Price <derek@ximbiot.com>

	* server.c (isSameHost): Handle gethostname & gethostbyname errors.

2004-10-29 Derek Price <derek@ximbiot.com>

	* server.c (isSameHost): Use strcasecmp to compare host names.

2004-10-29  Mark D. Baushke  <mdb@cvshome.org>

	* server.c: Need to #include <netdb.h> for either PROXY_SUPPORT or
	HAVE_GSSAPI to get gethostbyname() declarations for

2004-10-29  Mark D. Baushke  <mdb@cvshome.org>

	* filesubr.c (SIZE_MAX, SSIZE_MAX): Use #include "xsize.h" instead.
	(xreadlink): Use xrealloc instead of xmalloc/free.
	
2004-10-29  Mark D. Baushke  <mdb@cvshome.org>

	* filesubr.c (SIZE_MAX, SSIZE_MAX): New constants.
	(xreadlink): Deal with symlinks longer than 127 bytes.
	(Problem reported as issue 190 by Gottfried Ganssauge
	<gotti@cvshome.org>.)

2004-10-29 Derek Price <derek@ximbiot.com>

	* server.c (isSameHost): New fuction.
	(same_path): Rename to...